--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "better-sqlite3": "^11.6.0",
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
